--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@polkadot/keyring": "^12.5.1",
     "@polkadot/util-crypto": "^12.5.1",
     "assert": "^2.1.0",
+    "buffer": "^6.0.3",
     "webpack": "^5.89.0"
   },
   "devDependencies": {
